# future_factory

./: .gitignore  Cargo.toml
src/: geometry.rs  main.rs  pipeline.rs  primitives.rs  shader.rs  texture.rs  utilities.rs
src/game/: mod.rs  tiles.rs
src/rendering/: mod.rs  pipeline.rs  shader.rs  texture.rs
src/shader_src/: fragment.frag  simple.frag  simple.vert  stencil.frag  texture.frag  texture.vert  tile.frag  tile.vert  vertex.vert
