[package]
name = "glloadtest"
version = "0.1.0"
authors = ["David <touisbetterthanpi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.41.0"
repr-trait = "1.0.0"
rand = "0.8.0"
cgmath = "0.18.0"